force-app/main/default/objects/ems_EM_Additional_Detail__c/ems_EM_Additional_Detail__c.object-meta.xml
<CustomObject>
    <label>Professional Proficiency</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Professional Proficiency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Proficiency</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>