force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Additional_Details</relationshipName>
    <type>Lookup</type>
</CustomField>