force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_Certifications__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Certifications__c</fullName>
    <label>Certification Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CERTIFIED ADMINISTRATOR</fullName>
            </value>
            <value>
                <fullName>ADVANCED ADMINISTRATOR</fullName>
            </value>
            <value>
                <fullName>PLATFORM APP BUILDER</fullName>
            </value>
            <value>
                <fullName>USER EXPERIENCE (UX) DESIGNER</fullName>
            </value>
            <value>
                <fullName>STRATEGY DESIGNER</fullName>
            </value>
            <value>
                <fullName>SERVICE CLOUD CONSULTANT</fullName>
            </value>
            <value>
                <fullName>CPQ SPECIALIST</fullName>
            </value>
            <value>
                <fullName>SALES CLOUD CONSULTANT</fullName>
            </value>
            <value>
                <fullName>FIELD SERVICE CONSULTANT</fullName>
            </value>
            <value>
                <fullName>EXPERIENCE CLOUD CONSULTANT</fullName>
            </value>
            <value>
                <fullName>TABLEAU CRM &amp; EINSTEIN DISCOVERY CONSULTANT</fullName>
            </value>
            <value>
                <fullName>NONPROFIT CLOUD CONSULTANT</fullName>
            </value>
            <value>
                <fullName>EDUCATION CLOUD CONSULTANT</fullName>
            </value>
            <value>
                <fullName>OMNISTUDIO CONSULTANT</fullName>
            </value>
            <value>
                <fullName>PLATFORM DEVELOPER I</fullName>
            </value>
            <value>
                <fullName>PLATFORM DEVELOPER II</fullName>
            </value>
            <value>
                <fullName>JAVASCRIPT DEVELOPER I</fullName>
            </value>
            <value>
                <fullName>INDUSTRIES CPQ DEVELOPER</fullName>
            </value>
            <value>
                <fullName>OMNISTUDIO DEVELOPER</fullName>
            </value>
            <value>
                <fullName>B2C COMMERCE DEVELOPER</fullName>
            </value>
            <value>
                <fullName>B2C COMMERCE ARCHITECT</fullName>
            </value>
            <value>
                <fullName>IDENTITY &amp; ACCESS MANAGEMENT ARCHITECT</fullName>
            </value>
            <value>
                <fullName>SHARING &amp; VISIBILITY ARCHITECT</fullName>
            </value>
            <value>
                <fullName>DEVELOPMENT LIFECYCLE &amp; DEPLOYMENT ARCHITECT</fullName>
            </value>
            <value>
                <fullName>HEROKU ARCHITECT</fullName>
            </value>
            <value>
                <fullName>INTEGRATION ARCHITECT</fullName>
            </value>
            <value>
                <fullName>DATA ARCHITECT</fullName>
            </value>
            <value>
                <fullName>APPLICATION ARCHITECT</fullName>
            </value>
            <value>
                <fullName>SYSTEM ARCHITECT</fullName>
            </value>
            <value>
                <fullName>B2C SOLUTION ARCHITECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>