force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_Degree1__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Degree1__c</fullName>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>