force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_Field_of_Study1__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Field_of_Study1__c</fullName>
    <label>Field of Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>