force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_From_Date__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_From_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>