force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_GDate3__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_GDate3__c</fullName>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>