force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Job_Title__c</fullName>
    <label>Job Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>