force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_Previous_Company_HR_EmailId__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Previous_Company_HR_EmailId__c</fullName>
    <label>Previous Company HR Email ID</label>
    <type>Email</type>
</CustomField>