force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_Previous_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Previous_Company_Name__c</fullName>
    <label>Previous Company Name</label>
    <type>TextArea</type>
</CustomField>