force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/EMS_EM_To_Date5__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_To_Date5__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>