force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/Onboarding_Request__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Request</label>
    <referenceTo>EMS_EM_Onboarding_Request__c</referenceTo>
    <relationshipName>Additional_Details</relationshipName>
    <type>Lookup</type>
</CustomField>