force-app/main/default/objects/ems_EM_Additional_Detail__c/fields/Work_Details_Filled__c.field-meta.xml
<CustomField>
    <fullName>Work_Details_Filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Details Filled</label>
    <type>Checkbox</type>
</CustomField>