force-app/main/default/objects/ems_EM_Additional_Detail__c/recordTypes/Education_Details.recordType-meta.xml
<RecordType>
    <fullName>Education_Details</fullName>
    <active>true</active>
    <label>Education Details</label>
</RecordType>