force-app/main/default/objects/ems_EM_Additional_Detail__c/recordTypes/Work_Details.recordType-meta.xml
<RecordType>
    <fullName>Work_Details</fullName>
    <active>true</active>
    <label>Work Details</label>
</RecordType>