force-app/main/default/objects/ems_EM_Additional_Detail__c/listViews/Education_Details.listView-meta.xml
<ListView>
    <fullName>Education_Details</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ContactId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ems_EM_Additional_Detail__c.Education_Details</value>
    </filters>
    <label>Education Details</label>
</ListView>