force-app/main/default/objects/ems_EM_Additional_Detail__c/listViews/Work_Details.listView-meta.xml
<ListView>
    <fullName>Work_Details</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ContactId__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ems_EM_Additional_Detail__c.Work_Details</value>
    </filters>
    <label>Work Details</label>
</ListView>